--- a/signature-apparel-premiere3.html
+++ b/signature-apparel-premiere3.html
@@ -770,7 +770,7 @@ html, body {
             <a href="store.html">Store</a>
             <a href="music.html">MUSIC</a>
             <a href="about.html">About</a>
-            <a href="checkout.html">Checkout</a>
+            <a href="store.html">Checkout</a>
         </div>
     </div>
 </nav>
@@ -802,11 +802,11 @@ html, body {
         </div>
 
         <div class="pv-banner">
-            <img src="bookart/banner.png" alt="">
+            <img loading=\"lazy\" src="bookart/banner.png" alt="">
         </div>
 
         <div class="hero-stage" id="heroStage">
-            <img class="hero-img hero-drift" id="heroImg" src="ModelPictures/Panthers&vampiresjogger.png" alt="">
+            <img loading=\"lazy\" class="hero-img hero-drift" id="heroImg" src="ModelPictures/Panthers&vampiresjogger.png" alt="">
             <div class="hero-hit" id="heroHit"></div>
             <div class="cue" id="cue"><strong>TAP</strong> TO VIEW MOCKUPS</div>
         </div>
@@ -831,7 +831,7 @@ html, body {
 
         <div class="pv-book-block">
             <div class="pv-book-inner">
-                <img class="pv-book-cover" src="bookart/p&vcover.png" alt="">
+                <img loading=\"lazy\" class="pv-book-cover" src="bookart/p&vcover.png" alt="">
                 <div class="pv-book-title">PANTHERS & VAMPIRES — PREVIEW</div>
                 <a class="pv-book-link" href="panthers-vampires-preview.html">ENTER P&V WORLD</a>
             </div>
@@ -870,7 +870,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png" alt="">
                     <div class="card-meta">
                         <h4>POM POM BEANIE</h4>
                         <div class="price-row">
@@ -886,7 +886,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtfront.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — FRONT</h4>
                         <div class="price-row">
@@ -902,7 +902,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtback.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — BACK</h4>
                         <div class="price-row">
@@ -917,7 +917,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtside.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtside.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — SIDE</h4>
                         <div class="price-row">
@@ -932,7 +932,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiresgirlsjoggersfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiresgirlsjoggersfront.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — FRONT</h4>
                         <div class="price-row">
@@ -948,7 +948,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiresgirlsjoggersback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiresgirlsjoggersback.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — BACK</h4>
                         <div class="price-row">
@@ -968,7 +968,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/v&pbeanie.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/v&pbeanie.png" alt="">
                     <div class="card-meta">
                         <h4>BEANIE</h4>
                         <div class="price-row">
@@ -984,7 +984,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtfront.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — FRONT</h4>
                         <div class="price-row">
@@ -1000,7 +1000,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtback.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — BACK</h4>
                         <div class="price-row">
@@ -1015,7 +1015,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtside.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtside.png" alt="">
                     <div class="card-meta">
                         <h4>SWEATSHIRT — SIDE</h4>
                         <div class="price-row">
@@ -1030,7 +1030,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/v&pmensjoggerfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/v&pmensjoggerfront.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — FRONT</h4>
                         <div class="price-row">
@@ -1046,7 +1046,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresjogger/v&pmensjoggerback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresjogger/v&pmensjoggerback.png" alt="">
                     <div class="card-meta">
                         <h4>JOGGER PANTS — BACK</h4>
                         <div class="price-row">
@@ -1188,6 +1188,74 @@ viewAllBtn.addEventListener("click", (e) => {
     e.preventDefault();
     e.stopPropagation();
     openModal();
+});
+</script>
+
+
+<div id="mini-cart" style="display:none; position:fixed; top:80px; right:20px; width:320px; background:#000; border:1px solid rgba(212,175,55,0.6); z-index:9999; padding:16px;">
+  <h4 style="letter-spacing:0.28em; font-size:0.7rem;">CART</h4>
+  <div id="mini-cart-items"></div>
+  <button type="button" class="btn-checkout" style="margin-top:12px; width:100%; border:1px solid rgba(212,175,55,0.6); background:transparent; color:#f3d688; padding:10px; cursor:pointer;">CHECKOUT</button>
+</div>
+<div id="cart-toast" style="position:fixed; bottom:20px; right:20px; background:#000; border:1px solid rgba(212,175,55,0.6); color:#f3d688; padding:12px 18px; letter-spacing:0.28em; display:none; z-index:9999;"></div>
+
+
+<script>
+// SHOPIFY CART LOGIC
+function addToCart(variantId) {
+  console.log("Adding to cart:", variantId);
+  // Your existing Shopify cart logic would go here
+  showToast("ADDED TO CART");
+}
+
+function showToast(msg) {
+  const toast = document.getElementById("cart-toast");
+  toast.textContent = msg;
+  toast.style.display = "block";
+  setTimeout(() => { toast.style.display = "none"; }, 2000);
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+    const lockDate = new Date("2026-02-02");
+    const now = new Date();
+    
+    // Assign Variant IDs to buttons for VAMPIRES & PANTHERS
+    const variantMap = {
+        "V&P POM POM BEANIE": "gid://shopify/ProductVariant/52764320760126",
+        "SWEATSHIRT — FRONT": "gid://shopify/ProductVariant/52764324561214",
+        "SWEATSHIRT — BACK": "gid://shopify/ProductVariant/52764324561214",
+        "JOGGER PANTS — FRONT": "gid://shopify/ProductVariant/52764328427870",
+        "JOGGER PANTS — BACK": "gid://shopify/ProductVariant/52764328427870",
+        "V&P BEANIE": "gid://shopify/ProductVariant/52764332327262",
+        "BOY SWEATSHIRT — FRONT": "gid://shopify/ProductVariant/52764334522718",
+        "BOY JOGGER PANTS — FRONT": "gid://shopify/ProductVariant/52764336587102"
+    };
+
+    document.querySelectorAll(".gallery-card").forEach(card => {
+        const title = card.querySelector("h4").textContent.trim();
+        const btn = card.querySelector(".buy-btn");
+        const variantId = variantMap[title];
+
+        if (now < lockDate) {
+            btn.textContent = "COMING FEB 2ND";
+            btn.disabled = true;
+            btn.style.cursor = "not-allowed";
+            btn.style.opacity = "0.5";
+        } else {
+            btn.textContent = "ADD TO CART";
+            btn.disabled = false;
+            btn.style.cursor = "pointer";
+            btn.style.opacity = "1";
+            btn.addEventListener("click", () => {
+                if (variantId) addToCart(variantId);
+            });
+        }
+    });
+
+    // Update availability messages
+    document.querySelectorAll(".avail-msg").forEach(msg => {
+        msg.textContent = "AVAILABLE FEBRUARY 2, 2026";
+    });
 });
 </script>
 
