--- a/signature-apparel-premiere4.html
+++ b/signature-apparel-premiere4.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -773,7 +772,7 @@ html, body {
             <a href="store.html">Store</a>
             <a href="music.html">MUSIC</a>
             <a href="about.html">About</a>
-            <a href="checkout.html">Checkout</a>
+            <a href="store.html">Checkout</a>
         </div>
     </div>
 </nav>
@@ -805,11 +804,11 @@ html, body {
         </div>
 
         <div class="pv-banner">
-            <img src="bookart/banner.png" alt="">
+            <img loading=\"lazy\" src="bookart/banner.png" alt="">
         </div>
 
         <div class="hero-stage" id="heroStage">
-            <img class="hero-img hero-drift" id="heroImg" src="ModelPictures/Panthers&vampiresstreetwear.png" alt="">
+            <img loading=\"lazy\" class="hero-img hero-drift" id="heroImg" src="ModelPictures/Panthers&vampiresstreetwear.png" alt="">
             <div class="hero-hit" id="heroHit"></div>
             <div class="cue" id="cue"><strong>TAP</strong> TO VIEW MOCKUPS</div>
         </div>
@@ -834,7 +833,7 @@ html, body {
 
         <div class="pv-book-block">
             <div class="pv-book-inner">
-                <img class="pv-book-cover" src="bookart/p&vcover.png" alt="">
+                <img loading=\"lazy\" class="pv-book-cover" src="bookart/p&vcover.png" alt="">
                 <div class="pv-book-title">PANTHERS & VAMPIRES — PREVIEW</div>
                 <a class="pv-book-link" href="panthers-vampires-preview.html">ENTER P&V WORLD</a>
             </div>
@@ -873,7 +872,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vfittedhat.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vfittedhat.png" alt="">
                     <div class="card-meta">
                         <h4>FITTED HAT</h4>
                         <div class="price-row">
@@ -889,7 +888,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodiefront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodiefront.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — FRONT</h4>
                         <div class="price-row">
@@ -905,7 +904,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodieleft.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodieleft.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — LEFT</h4>
                         <div class="price-row">
@@ -920,7 +919,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodieright.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodieright.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — RIGHT</h4>
                         <div class="price-row">
@@ -935,7 +934,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodieback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodieback.png" alt="">
                     <div class="card-meta">
                         <h4>CROP HOODIE — BACK</h4>
                         <div class="price-row">
@@ -950,7 +949,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearyogapantsfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearyogapantsfront.png" alt="">
                     <div class="card-meta">
                         <h4>YOGA PANTS — FRONT</h4>
                         <div class="price-row">
@@ -966,7 +965,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">GIRL</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearyogapantsback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearyogapantsback.png" alt="">
                     <div class="card-meta">
                         <h4>YOGA PANTS — BACK</h4>
                         <div class="price-row">
@@ -986,7 +985,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vsnapback1.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vsnapback1.png" alt="">
                     <div class="card-meta">
                         <h4>SNAPBACK HAT</h4>
                         <div class="price-row">
@@ -1002,7 +1001,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vsnapback2.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vsnapback2.png" alt="">
                     <div class="card-meta">
                         <h4>SNAPBACK HAT — ALT</h4>
                         <div class="price-row">
@@ -1017,7 +1016,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodiefront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodiefront.png" alt="">
                     <div class="card-meta">
                         <h4>HOODIE — FRONT</h4>
                         <div class="price-row">
@@ -1033,7 +1032,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodieside.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodieside.png" alt="">
                     <div class="card-meta">
                         <h4>HOODIE — SIDE</h4>
                         <div class="price-row">
@@ -1048,7 +1047,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodieback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodieback.png" alt="">
                     <div class="card-meta">
                         <h4>HOODIE — BACK</h4>
                         <div class="price-row">
@@ -1063,7 +1062,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vshortfront.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vshortfront.png" alt="">
                     <div class="card-meta">
                         <h4>SWEAT SHORTS — FRONT</h4>
                         <div class="price-row">
@@ -1079,7 +1078,7 @@ html, body {
 
                 <div class="gallery-card">
                     <div class="badge">BOY</div>
-                    <img src="ModelPictures/Panthers&vampiresstreewear/P&Vshortback.png" alt="">
+                    <img loading=\"lazy\" src="ModelPictures/Panthers&vampiresstreewear/P&Vshortback.png" alt="">
                     <div class="card-meta">
                         <h4>SWEAT SHORTS — BACK</h4>
                         <div class="price-row">
@@ -1221,6 +1220,71 @@ viewAllBtn.addEventListener("click", (e) => {
     e.preventDefault();
     e.stopPropagation();
     openModal();
+});
+</script>
+
+
+<div id="mini-cart" style="display:none; position:fixed; top:80px; right:20px; width:320px; background:#000; border:1px solid rgba(212,175,55,0.6); z-index:9999; padding:16px;">
+  <h4 style="letter-spacing:0.28em; font-size:0.7rem;">CART</h4>
+  <div id="mini-cart-items"></div>
+  <button type="button" class="btn-checkout" style="margin-top:12px; width:100%; border:1px solid rgba(212,175,55,0.6); background:transparent; color:#f3d688; padding:10px; cursor:pointer;">CHECKOUT</button>
+</div>
+<div id="cart-toast" style="position:fixed; bottom:20px; right:20px; background:#000; border:1px solid rgba(212,175,55,0.6); color:#f3d688; padding:12px 18px; letter-spacing:0.28em; display:none; z-index:9999;"></div>
+
+
+<script>
+// SHOPIFY CART LOGIC
+function addToCart(variantId) {
+  console.log("Adding to cart:", variantId);
+  // Your existing Shopify cart logic would go here
+  showToast("ADDED TO CART");
+}
+
+function showToast(msg) {
+  const toast = document.getElementById("cart-toast");
+  toast.textContent = msg;
+  toast.style.display = "block";
+  setTimeout(() => { toast.style.display = "none"; }, 2000);
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+    const lockDate = new Date("2026-02-02");
+    const now = new Date();
+    
+    // Assign Variant IDs to buttons for SIGNATURE EPÒK
+    const variantMap = {
+        "SIGNATURE BEANIE": "gid://shopify/ProductVariant/52764435808574",
+        "SIGNATURE SWEATSHIRT — FRONT": "gid://shopify/ProductVariant/52764439052606",
+        "SIGNATURE SWEATSHIRT — BACK": "gid://shopify/ProductVariant/52764439052606",
+        "SIGNATURE JOGGER PANTS — FRONT": "gid://shopify/ProductVariant/52764441018686",
+        "SIGNATURE JOGGER PANTS — BACK": "gid://shopify/ProductVariant/52764441018686"
+    };
+
+    document.querySelectorAll(".gallery-card").forEach(card => {
+        const title = card.querySelector("h4").textContent.trim();
+        const btn = card.querySelector(".buy-btn");
+        const variantId = variantMap[title];
+
+        if (now < lockDate) {
+            btn.textContent = "COMING FEB 2ND";
+            btn.disabled = true;
+            btn.style.cursor = "not-allowed";
+            btn.style.opacity = "0.5";
+        } else {
+            btn.textContent = "ADD TO CART";
+            btn.disabled = false;
+            btn.style.cursor = "pointer";
+            btn.style.opacity = "1";
+            btn.addEventListener("click", () => {
+                if (variantId) addToCart(variantId);
+            });
+        }
+    });
+
+    // Update availability messages
+    document.querySelectorAll(".avail-msg").forEach(msg => {
+        msg.textContent = "AVAILABLE FEBRUARY 2, 2026";
+    });
 });
 </script>
 
