--- a/patchbaby.html
+++ b/patchbaby.html
@@ -42,12 +42,12 @@ html, body {
 
 .page-frame-outer::before {
     left:1px;
-    animation:leftScroll 45s linear infinite;
+    animation:leftScroll 80s linear infinite;
 }
 
 .page-frame-outer::after {
     right:9px;
-    animation:rightScroll 45s linear infinite;
+    animation:rightScroll 80s linear infinite;
 }
 
 @keyframes leftScroll {
@@ -76,7 +76,7 @@ html, body {
 .arabic-border span {
     display:inline-block;
     padding-left:100%;
-    animation:arabic-scroll 18s linear infinite;
+    animation:arabic-scroll 69s linear infinite;
 }
 
 @keyframes arabic-scroll {
@@ -152,8 +152,8 @@ html, body {
 <body>
 
 <div class="intro-stage">
-    <img id="enter-base" src="./images/Enter1.png" alt="">
-    <img id="enter-logo" src="./images/Enter2.png" alt="">
+    <img loading=\"lazy\" id="enter-base" src="./images/Enter1.png" alt="">
+    <img loading=\"lazy\" id="enter-logo" src="./images/Enter2.png" alt="">
     <div id="enter-text">ENTER HERE</div>
 </div>
 
