--- a/signature-apparel-premiere3.html
+++ b/signature-apparel-premiere3.html
@@ -766,7 +766,7 @@ html, body {
             <a href="movement.html">Movement</a>
             <a href="patchbaby.html">Patch Baby</a>
             <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
-            <a class="featured" href="book.html">The Book</a>
+            <a class="featured" href="book.html#pv-preview">The Book</a>
             <a href="store.html">Store</a>
             <a href="music.html">MUSIC</a>
             <a href="about.html">About</a>
