--- a/patchbabyworld1.html
+++ b/patchbabyworld1.html
@@ -220,8 +220,8 @@ html, body {
 <div class="world-stage" id="worldStage">
 
     <div class="world-interactive" id="interactiveWorld">
-        <img src="images/23.png" class="world-base" alt="Girl World">
-        <img src="images/23n2.png" class="world-overlay" alt="Girl World Logo">
+        <img loading=\"lazy\" src="images/23.png" class="world-base" alt="Girl World">
+        <img loading=\"lazy\" src="images/23n2.png" class="world-overlay" alt="Girl World Logo">
     </div>
 
     <div class="world-nav">
