--- a/signature-apparel-premiere3.html
+++ b/signature-apparel-premiere3.html
@@ -833,7 +833,7 @@ html, body {
             <div class="pv-book-inner">
                 <img loading=\"lazy\" class="pv-book-cover" src="bookart/p&vcover.png" alt="">
                 <div class="pv-book-title">PANTHERS & VAMPIRES — PREVIEW</div>
-                <a class="pv-book-link" href="panthers-vampires-preview.html">ENTER P&V WORLD</a>
+                <a class="pv-book-link" href="book.html#pv-preview">ENTER P&V WORLD</a>
             </div>
         </div>
 
