--- a/movement.html
+++ b/movement.html
@@ -351,13 +351,13 @@ img{
 .epok-panel { overflow:hidden; } /* allows safe crop when zoomed */
 
 .epok-panel img{
-  transform: scale(1.10);
+  transform: scale(.90);
   transform-origin: center center;
 }
 
 /* Mobile: slightly stronger zoom */
 @media (max-width:768px){
-  .epok-panel img{ transform: scale(1.50); }
+  .epok-panel img{ transform: scale(1.00); }
 }
 
  }  
